<resources>
    <string name="app_name">eCar</string>

    <string name="drawer_oper">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="pojazdy">Pojazdy</string>
    <string name="lista_tankowan">Dziennik tankowań</string>
    <string name="strona_glowna">Strona główna</string>
    <string name="lista_wydatkow">Lista wydatków</string>
    <string name="info_app">O aplikacji</string>
    <string name="trip_cost">Koszt jednostkowy</string>
    <string name="total_cost">Koszt całkowity</string>
    <string name="fuel_calc_cost">Zużycia paliwa</string>
    <string name="calculator">Kalkulator</string>
    <string name="distance">Odległość</string>
    <string name="price_per_liter">Cena za litr</string>
    <string name="price_per_liter_lowercase">cena za litr</string>
    <string name="consumption">Zużycie paliwa</string>
    <string name="passenger">Liczba pasażerów</string>
    <string name="calc_consumption">Oblicz spalanie</string>
    <string name="fuel_amount">Ilość paliwa</string>
    <string name="fuel_amount_lowercase">paliwo [l]</string>
    <string name="calc_cost">Oblicz koszt</string>
    <string name="calculator_label">Kalkulator spalania i kosztów</string>
    <string name="calc">Oblicz</string>
    <string name="przebieg">przebieg [km]</string>
    <string name="przebieg_uppercase">Przebieg</string>
    <string name="refuelling">Dodaj tankowanie</string>
    <string name="new_vehicle">Dodaj pojazd</string>
    <string name="fuel_type">Typ paliwa</string>
    <string name="vehicle_type">Typ pojazdu</string>
    <string name="veihicle_name">Nazwa pojazdu</string>
    <string name="veihicle_name_lowercase">nazwa pojazdu</string>
    <string name="no_refuellings">Nie posiadasz żadnych wpisów dla tego pojazdu</string>
    <string name="last_mileage">Ostatni przebieg</string>
    <string name="author">Jakub Serweta</string>
    <string name="reason">Aplikacja wykonana na potrzeby pracy dyplomowej</string>
    <string name="notifications">Powiadomienia</string>
    <string name="statistics">Statystyki</string>
    <string name="charts">Wykresy</string>
    <string name="general_info">Informacje ogólne</string>
    <string name="consumption_avg">Spalanie średnie</string>
    <string name="consumption_unit">l/100km</string>
    <string name="last_fuel_price">Ostatnia cena paliwa</string>
    <string name="price_unit">zł</string>
    <string name="last_consumption">Ostatnie spalanie</string>
    <string name="cost_fuel_sum">Paliwo (suma)</string>
    <string name="cost_sum">Inne wydatki (suma)</string>
    <string name="costs">Koszty</string>
    <string name="krakow">Kraków 2020</string>
    <string name="no_expenses">Nie posiadasz żadnych wydatków związanych z tym pojazdem</string>
    <string name="new_expense">Dodaj wydatek</string>
    <string name="cost_name">nazwa wydatku</string>
    <string name="cost_value">wartość [zł]</string>
    <string name="last_month">Ostatni miesiąc</string>
    <string name="all_history">Cała historia</string>
    <string name="summary_distance">Łączny dystans</string>
    <string name="summary_refuel">Zatankowane paliwo</string>
    <string name="summary_cost">Łączny koszt</string>
    <string name="refuelling_number">Liczba tankowań</string>
    <string name="avg_consumption">Średnie spalanie</string>
    <string name="avg_price_per_km">Średnia cena za km</string>
    <string name="worst_consumption">Najgorsze spalanie</string>
    <string name="najepsze_spalanie">Najlepsze spalanie</string>
    <string name="highest_price">Najwyższa cena paliwa</string>
    <string name="lowest_price">Najniższa cena paliwa</string>
    <string name="fuel_price_unit">zł/l</string>
    <string name="total_expenses">Łączny koszt</string>
    <string name="fuel">Paliwo</string>
    <string name="other_expenses">Inne wydatki</string>
    <string name="insurance">Ubezpieczenia</string>
    <string name="tickets">Mandaty</string>
    <string name="parking">Parkingi</string>
    <string name="serwis">Serwis</string>
    <string name="eksploatacja">Eksploatacja</string>
    <string name="car_wash">Myjnie</string>
    <string name="road">Przejazdy</string>
    <string name="rejestracja">Rejestracje</string>
    <string name="other">Inne</string>
    <string name="no_notifications">Nie posiadasz żadnych powiadomień</string>
    <string name="notifications_add">Dodaj powiadomienie</string>
    <string name="notifications_name">nazwa powiadomienia</string>
    <string name="set_date_time">ustaw datę i czas</string>
    <string name="notification_channel_description">This is a sample notification channel for demonstration purpose.</string>
</resources>
