<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/my_action_bar"/>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"

        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        android:id="@+id/app_name"
        android:fontFamily="@font/ocr"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />
    <ImageView
        android:id="@+id/logo_agh"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/app_name"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"

        android:src="@drawable/agh_logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/author_name"
        android:layout_below="@+id/logo_agh"
        android:fontFamily="@font/ocr"
        android:text="@string/author"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author_name"
        android:fontFamily="@font/ocr"
        android:id="@+id/desc"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/reason"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:fontFamily="@font/ocr"
        android:text="@string/krakow"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />


</RelativeLayout>