<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddVehicleActivity"
    android:id="@+id/add_veicle_layouttt">
    <include
        android:id="@+id/toolbar"
        layout="@layout/my_action_bar"/>

    <!--Name layout-->
    <LinearLayout
        android:id="@+id/vehicle_name_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2"
        android:layout_marginHorizontal="50dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="25dp"
            android:layout_weight="0.2"
            app:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_car_24"/>
        <EditText
            android:id="@+id/vehicle_name_field"
            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:hint="@string/veihicle_name_lowercase"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/vehicle_name"
            app:layout_constraintHorizontal_bias="0.5"/>
    </LinearLayout>



    <!--Mileage layout-->
    <LinearLayout
        android:id="@+id/vehicle_mileage_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginHorizontal="50dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_name_layout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="0.2"
            app:tint="@color/colorPrimary"
            android:src="@drawable/ic_av_timer_24px"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:inputType="number"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:id="@+id/mileage_input_field"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/mileage_field"
            android:hint="@string/przebieg"/>
    </LinearLayout>
    <!--Vehicle type layout-->
    <LinearLayout
        android:id="@+id/vehicle_type_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_mileage_layout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="25dp"
            android:layout_weight="0.2"
            app:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_label_24"/>

        <Spinner
            android:id="@+id/vehicle_type_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1.8"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="type"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/vehicle_type_field"
            app:layout_constraintHorizontal_bias="0.5"/>
    </LinearLayout>

    <!--Add vehicle button-->
    <Button
        android:id="@+id/add_vehicle_btn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_plus"
        android:layout_marginTop="10dp"
        android:text="@string/new_vehicle"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_type_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>